semaphore/build/log/idf_py_stdout_output_80305
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/madhusudhan/esp/esp-idf/examples/get-started/RTOS/semaphore/build/bootloader/esp-idf/esptool_py && /home/madhusudhan/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/madhusudhan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/madhusudhan/esp/esp-idf/examples/get-started/RTOS/semaphore/build/bootloader/bootloader.bin
Bootloader binary size 0x6590 bytes. 0xa70 bytes (9%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj 
/home/madhusudhan/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -Iconfig -I../../../../../components/newlib/platform_include -I../../../../../components/freertos/FreeRTOS-Kernel-SMP/include -I../../../../../components/freertos/esp_additions/include/freertos -I../../../../../components/freertos/FreeRTOS-Kernel-SMP/portable/xtensa/include -I../../../../../components/freertos/esp_additions/include -I../../../../../components/freertos/FreeRTOS-Kernel-SMP/portable/xtensa/include/freertos -I../../../../../components/esp_hw_support/include -I../../../../../components/esp_hw_support/include/soc -I../../../../../components/esp_hw_support/include/soc/esp32 -I../../../../../components/esp_hw_support/port/esp32/. -I../../../../../components/esp_hw_support/port/esp32/private_include -I../../../../../components/heap/include -I../../../../../components/log/include -I../../../../../components/soc/include -I../../../../../components/soc/esp32/. -I../../../../../components/soc/esp32/include -I../../../../../components/hal/esp32/include -I../../../../../components/hal/include -I../../../../../components/hal/platform_port/include -I../../../../../components/esp_rom/include -I../../../../../components/esp_rom/include/esp32 -I../../../../../components/esp_rom/esp32 -I../../../../../components/esp_common/include -I../../../../../components/esp_system/include -I../../../../../components/esp_system/port/soc -I../../../../../components/esp_system/port/include/private -I../../../../../components/xtensa/include -I../../../../../components/xtensa/esp32/include -I../../../../../components/lwip/include -I../../../../../components/lwip/include/apps -I../../../../../components/lwip/include/apps/sntp -I../../../../../components/lwip/lwip/src/include -I../../../../../components/lwip/port/esp32/include -I../../../../../components/lwip/port/esp32/include/arch -I../../../../../components/esp_ringbuf/include -I../../../../../components/efuse/include -I../../../../../components/efuse/esp32/include -I../../../../../components/driver/include -I../../../../../components/driver/deprecated -I../../../../../components/driver/esp32/include -I../../../../../components/esp_pm/include -I../../../../../components/mbedtls/port/include -I../../../../../components/mbedtls/mbedtls/include -I../../../../../components/mbedtls/mbedtls/library -I../../../../../components/mbedtls/esp_crt_bundle/include -I../../../../../components/app_update/include -I../../../../../components/spi_flash/include -I../../../../../components/bootloader_support/include -I../../../../../components/bootloader_support/bootloader_flash/include -I../../../../../components/pthread/include -I../../../../../components/esp_timer/include -I../../../../../components/app_trace/include -I../../../../../components/esp_event/include -I../../../../../components/nvs_flash/include -I../../../../../components/esp_phy/include -I../../../../../components/esp_phy/esp32/include -I../../../../../components/vfs/include -I../../../../../components/esp_netif/include -I../../../../../components/wpa_supplicant/include -I../../../../../components/wpa_supplicant/port/include -I../../../../../components/wpa_supplicant/esp_supplicant/include -I../../../../../components/esp_wifi/include -I../../../../../components/unity/include -I../../../../../components/unity/unity/src -I../../../../../components/cmock/CMock/src -I../../../../../components/console -I../../../../../components/http_parser -I../../../../../components/esp-tls -I../../../../../components/esp-tls/esp-tls-crypto -I../../../../../components/esp_adc/include -I../../../../../components/esp_adc/interface -I../../../../../components/esp_adc/esp32/include -I../../../../../components/esp_adc/deprecated/include -I../../../../../components/esp_eth/include -I../../../../../components/esp_gdbstub/include -I../../../../../components/esp_gdbstub/xtensa -I../../../../../components/esp_gdbstub/esp32 -I../../../../../components/esp_hid/include -I../../../../../components/tcp_transport/include -I../../../../../components/esp_http_client/include -I../../../../../components/esp_http_server/include -I../../../../../components/esp_https_ota/include -I../../../../../components/esp_lcd/include -I../../../../../components/esp_lcd/interface -I../../../../../components/protobuf-c/protobuf-c -I../../../../../components/protocomm/include/common -I../../../../../components/protocomm/include/security -I../../../../../components/protocomm/include/transports -I../../../../../components/esp_local_ctrl/include -I../../../../../components/esp_psram/include -I../../../../../components/sdmmc/include -I../../../../../components/esp_serial_slave_link/include -I../../../../../components/espcoredump/include -I../../../../../components/espcoredump/include/port/xtensa -I../../../../../components/wear_levelling/include -I../../../../../components/fatfs/diskio -I../../../../../components/fatfs/vfs -I../../../../../components/fatfs/src -I../../../../../components/idf_test/include -I../../../../../components/idf_test/include/esp32 -I../../../../../components/ieee802154/include -I../../../../../components/json/cJSON -I../../../../../components/mqtt/esp-mqtt/include -I../../../../../components/perfmon/include -I../../../../../components/spiffs/include -I../../../../../components/ulp/ulp_common/include -I../../../../../components/ulp/ulp_common/include/esp32 -I../../../../../components/wifi_provisioning/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/madhusudhan/esp/esp-idf/examples/get-started/RTOS/semaphore=. -fmacro-prefix-map=/home/madhusudhan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.1-dev-187-g5b11895700\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj   -c ../main/cdacmain.c
../main/cdacmain.c: In function 'app_main':
../main/cdacmain.c:24:5: error: implicit declaration of function 'xSemaphoreCreateBinary' [-Werror=implicit-function-declaration]
   24 |     xSemaphoreCreateBinary();
      |     ^~~~~~~~~~~~~~~~~~~~~~
../main/cdacmain.c:19:16: warning: variable 'res' set but not used [-Wunused-but-set-variable]
   19 |     BaseType_t res;
      |                ^~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
